--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -11,7 +11,11 @@
           </div>
           <label for="ok" class="footer__form-label">
             <input type="checkbox" id="ok">
-            <span class="footer__form-box"></span>
+            <span class="footer__form-box">
+              <svg class="footer__form-box-icon">
+                <use xlink:href="img/sprite.svg#check-input"></use>
+              </svg>
+            </span>
             <span>Я принимаю условия <span style="color:#f2f2f2;">Политики конфиденциальности</span></span>
           </label>
           <button class="footer__form-submit">Оставить заявку на обучение</button>
