--- a/src/partials/service.html
+++ b/src/partials/service.html
@@ -70,8 +70,8 @@
         </div>
         <div class="service__cards">
           <div class="service__card">
-              <h5 class="service__card-title">Образовательный курс для врачей</h5>  
-              <button class="service__card-btn">
+            <h5 class="service__card-title">Образовательный курс для врачей</h5>  
+            <button class="service__card-btn">
               <svg class="service__card-icon">
                 <use xlink:href="img/sprite.svg#array-down"></use>
               </svg>
@@ -98,7 +98,10 @@
       <div class="container">
         <div class="service__top">преимущества</div>
         <div class="service__edge">
-          <p class="service__description service__description--medium">Благодаря большому объему практических занятий, <span class="service__description-strong">врач на 100% готов к самостоятельной работе</span> с пациентом по окончанию курса</p>
+          <div style="border: 2p                                                              solid green" class="service__description service__description--medium">
+            <div style="position: sticky; top: 0;">Благодаря большому объему практических занятий, <span class="service__description-strong">врач на 100% готов к самостоятельной работе</span> с пациентом по окончанию курса</div>
+          </div>
+          
           <div class="service__box">
             <div class="service__box-item">
               <p class="service__box-number">300 +</p>
@@ -140,8 +143,8 @@
       </div>
     </div>
 
-    <div class="" style="height: 60px; background: #000;">
-         text-slider
+    <div class="service__text-slide-inner" style="height: 60px; background: #000;">
+      <div class="service__text-slide-content">Мировой рекорд – максимальное количество перенесенных за одну сессию графтов.    В результате 11-часовой процедуры пересажено 9 688 фолликулярных объединений, что составляет примерно 19 360 волос</div>
     </div>
 
     
@@ -180,9 +183,9 @@
                 <img src="img/slide.jpg" />
               </div>
             </div>
-            <div class="swiper-pagination"></div>
-            <div class="swiper-button-next"></div>
-            <div class="swiper-button-prev"></div>
+            <div class="swiper-pagination1"></div>
+            <div class="swiper-button-next1"></div>
+            <div class="swiper-button-prev1"></div>
           </div>
         </div>
       </div>
@@ -225,7 +228,7 @@
           </div>
         </div>
         <div class="service__schedule-video">
-        
+          <img src="img/video.jpg" alt="video" style="display: block; width: 100%; height: 100%;">
         </div>
       </div>
     </div> 
