--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -6,6 +6,7 @@
 
 // подключения компонентов страницы
 @import "./components/header";
+@import "./components/sideMenu";
 @import "./components/banner";
 @import "./components/service";
 @import "./components/footer";
